New version mountain

--- a/css/kstyle.css
+++ b/css/kstyle.css
@@ -25,16 +25,7 @@ a.navbar-brand {
   color: #f7e4ab !important;
 }
 
-image {
-  width: 100%;
-}
 
-.row {
-  margin-top: 3rem;
-}
-.bd-placeholder-img.bd-placeholder-img-lg.featurette-image.img-fluid.mx-auto {
-  border-radius: 10px;
-}
 /* CUSTOMIZE THE CAROUSEL
 -------------------------------------------------- */
 
@@ -66,6 +57,7 @@ image {
   color: #303540;
 }
 
+.btn-primary
 /* MARKETING CONTENT
 -------------------------------------------------- */
 
@@ -87,12 +79,7 @@ image {
   margin-left: .75rem;
 }
 
-.btn-secondary {
-  background-color: #f7e4ab;
-  border-color: #f7e4ab;
-  color: #303540;
-  margin-top: 0.5rem;
-}
+
 /* Featurettes
 ------------------------- */
 
